--- a/BloodBank.Management.Web/BloodBank.Management.Web.csproj
+++ b/BloodBank.Management.Web/BloodBank.Management.Web.csproj
@@ -199,6 +199,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\blood-donation.png" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
