--- a/BloodBank.Management.DataAccess/BloodBank.Management.DataAccess.csproj
+++ b/BloodBank.Management.DataAccess/BloodBank.Management.DataAccess.csproj
@@ -102,6 +102,18 @@
     <Compile Include="Migrations\202402261904185_Updated-Recipient2.Designer.cs">
       <DependentUpon>202402261904185_Updated-Recipient2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202402271732187_Updated-Inventory.cs" />
+    <Compile Include="Migrations\202402271732187_Updated-Inventory.Designer.cs">
+      <DependentUpon>202402271732187_Updated-Inventory.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202402291813302_inventory23.cs" />
+    <Compile Include="Migrations\202402291813302_inventory23.Designer.cs">
+      <DependentUpon>202402291813302_inventory23.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202403012009456_update-Donation.cs" />
+    <Compile Include="Migrations\202403012009456_update-Donation.Designer.cs">
+      <DependentUpon>202403012009456_update-Donation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -151,6 +163,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202402261904185_Updated-Recipient2.resx">
       <DependentUpon>202402261904185_Updated-Recipient2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202402271732187_Updated-Inventory.resx">
+      <DependentUpon>202402271732187_Updated-Inventory.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202402291813302_inventory23.resx">
+      <DependentUpon>202402291813302_inventory23.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202403012009456_update-Donation.resx">
+      <DependentUpon>202403012009456_update-Donation.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
