--- a/BloodBank.Management.Web/BloodBank.Management.Web.csproj
+++ b/BloodBank.Management.Web/BloodBank.Management.Web.csproj
@@ -239,6 +239,7 @@
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\Inventory\inventory.create.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
