--- a/BloodBank.Management.DataAccess/BloodBank.Management.DataAccess.csproj
+++ b/BloodBank.Management.DataAccess/BloodBank.Management.DataAccess.csproj
@@ -70,49 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BloodCenterDbContext.cs" />
-    <Compile Include="Migrations\202402241811227_Added-Database-Dbset.cs" />
-    <Compile Include="Migrations\202402241811227_Added-Database-Dbset.Designer.cs">
-      <DependentUpon>202402241811227_Added-Database-Dbset.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402251911272_Updated-Donot-model2.cs" />
-    <Compile Include="Migrations\202402251911272_Updated-Donot-model2.Designer.cs">
-      <DependentUpon>202402251911272_Updated-Donot-model2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402251914282_Updated-Donot-model3.cs" />
-    <Compile Include="Migrations\202402251914282_Updated-Donot-model3.Designer.cs">
-      <DependentUpon>202402251914282_Updated-Donot-model3.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402251941579_Updated-Donot-model4.cs" />
-    <Compile Include="Migrations\202402251941579_Updated-Donot-model4.Designer.cs">
-      <DependentUpon>202402251941579_Updated-Donot-model4.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402251944488_Updated-Donot-model5.cs" />
-    <Compile Include="Migrations\202402251944488_Updated-Donot-model5.Designer.cs">
-      <DependentUpon>202402251944488_Updated-Donot-model5.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402261810431_Updated-Hospital.cs" />
-    <Compile Include="Migrations\202402261810431_Updated-Hospital.Designer.cs">
-      <DependentUpon>202402261810431_Updated-Hospital.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402261839168_Updated-Recipient.cs" />
-    <Compile Include="Migrations\202402261839168_Updated-Recipient.Designer.cs">
-      <DependentUpon>202402261839168_Updated-Recipient.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402261904185_Updated-Recipient2.cs" />
-    <Compile Include="Migrations\202402261904185_Updated-Recipient2.Designer.cs">
-      <DependentUpon>202402261904185_Updated-Recipient2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402271732187_Updated-Inventory.cs" />
-    <Compile Include="Migrations\202402271732187_Updated-Inventory.Designer.cs">
-      <DependentUpon>202402271732187_Updated-Inventory.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202402291813302_inventory23.cs" />
-    <Compile Include="Migrations\202402291813302_inventory23.Designer.cs">
-      <DependentUpon>202402291813302_inventory23.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\202403012009456_update-Donation.cs" />
-    <Compile Include="Migrations\202403012009456_update-Donation.Designer.cs">
-      <DependentUpon>202403012009456_update-Donation.cs</DependentUpon>
+    <Compile Include="Migrations\202403031419300_test.cs" />
+    <Compile Include="Migrations\202403031419300_test.Designer.cs">
+      <DependentUpon>202403031419300_test.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -140,38 +100,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202402241811227_Added-Database-Dbset.resx">
-      <DependentUpon>202402241811227_Added-Database-Dbset.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402251911272_Updated-Donot-model2.resx">
-      <DependentUpon>202402251911272_Updated-Donot-model2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402251914282_Updated-Donot-model3.resx">
-      <DependentUpon>202402251914282_Updated-Donot-model3.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402251941579_Updated-Donot-model4.resx">
-      <DependentUpon>202402251941579_Updated-Donot-model4.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402251944488_Updated-Donot-model5.resx">
-      <DependentUpon>202402251944488_Updated-Donot-model5.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402261810431_Updated-Hospital.resx">
-      <DependentUpon>202402261810431_Updated-Hospital.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402261839168_Updated-Recipient.resx">
-      <DependentUpon>202402261839168_Updated-Recipient.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402261904185_Updated-Recipient2.resx">
-      <DependentUpon>202402261904185_Updated-Recipient2.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402271732187_Updated-Inventory.resx">
-      <DependentUpon>202402271732187_Updated-Inventory.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202402291813302_inventory23.resx">
-      <DependentUpon>202402291813302_inventory23.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202403012009456_update-Donation.resx">
-      <DependentUpon>202403012009456_update-Donation.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202403031419300_test.resx">
+      <DependentUpon>202403031419300_test.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
